# Annotator_taskManagerCli

./: README.md
Annotator/: AST_Annotator.py  Annotator_Structure.txt  README.md  Taskfile.yml  cli_righttyper.out  combined_final_report.csv  conditional_annotator.py  generate_csv.py  pyproject.toml  righttyper.py  run_pipeline.py  structure.txt  task_manager_righttyper.out  variable_annotation_report.txt  variable_annotator.py
Annotator/annotation_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Annotator/testcases/: cli_AST_report.csv  cli_conditional_runtime_annotation_report.csv  task_manager_AST_report.csv  task_manager_conditional_runtime_annotation_report.csv
